# ralink_sdk

Uboot/: config.in  config.mk  uboot_version.h
Uboot/board/rt2880/: serial.c
Uboot/cpu/ralink_soc/: start.S
Uboot/drivers/: Makefile  mii_mgr.c  nand_flash.c  ralink_nand.h  rt2880_eth.c  spi_flash.c  spi_rt6855A_flash.c
Uboot/include/: rt_mmap.h  version.h
Uboot/include/configs/: rt2880.h
Uboot/lib_mips/: board.c
Uboot/net/: net.c
Uboot/uip/: Makefile
Uboot/uip/uip/: psock.c  uip.c  uip.h  uipopt.h
Uboot/uip/unix/: Makefile  uip-conf.h  unix.c
source/: .cvsignore  History  Makefile
source/config/: config.in  mkconfig
source/lib/: .config.cmd  Makefile  Rules.mak
source/lib/include/: features.h  time.h
source/lib/libbluetooth/: Makefile
source/lib/libevent-2.0.2-alpha/: config.h  config.status  evdns.c  event-config.h  evmap.c  libtool  makefile  mkinstalldirs  tags
source/lib/libflex/: Makefile  config.h
source/lib/libncurses-5.7/: AUTHORS  INSTALL  Makefile.in  Makefile.os2  NEWS  README  README.emx  TO-DO  aclocal.m4  announce.html.in  config.status  configure  configure.in  convert_configure.pl  dist.mk  edit_man.sed  edit_man.sh  makefile  mk-0th.awk  mk-1st.awk  mk-2nd.awk  mk-hdr.awk  mkdirs.sh  tar-copy.sh
source/lib/libntfs-3g/: Makefile  compat.c  volume.c
source/lib/libnvram/: Makefile  flash_api.c  nvram.h  nvram_env.c  nvram_env.h
source/lib/libpcap-1.0.0/: CHANGES  INSTALL.txt  Makefile.in  README  aclocal.m4  arcnet.h  atmuni31.h  bpf_dump.c  bpf_image.c  config.h  config.status  configure.in  dlpisubs.c  dlpisubs.h  etherent.c  ethertype.h  fad-getad.c  fad-gifc.c  fad-glifc.c  fad-null.c  fad-win32.c  filtertest.c  gencode.c  gencode.h  grammar.y  inet.c  llc.h  makefile  nametoaddr.c  nlpid.h  optimize.c  pcap-bpf.c  pcap-bpf.h  pcap-bt-linux.c  pcap-bt-linux.h  pcap-config.1  pcap-dag.c  pcap-dag.h  pcap-dlpi.c  pcap-dos.c  (+77 more)
source/lib/libreadline/: Makefile.in  makefile
source/lib/libupnp/: Makefile
source/lib/libusb-0.1.12/: Makefile  bsd.c
source/lib/libusb-1.0.0/: Makefile  config.h  libtool  libusb-1.0.pc
source/lib/libzebra/: Makefile  Makefile.in  makefile  pid_output.c  str.h
source/lib/pcre-8.01/: config.h  libpcre.pc  libpcrecpp.pc  libpcreposix.pc  makefile  pcre-config
source/lib/utils/: liboptim.sh  mklibs
source/lib/vstr-1.0.15/: Makefile  Makefile.in  config.status  libtool  shtool  vstr-debug.pc  vstr.pc
source/lib/zlib/: ChangeLog  Makefile  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
source/lib/zlib-1.2.3/: ChangeLog  Makefile  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zconf.in.h  zutil.c  zutil.h
source/linux-2.4.x/: MAINTAINERS  Makefile
source/linux-2.4.x/Documentation/: Configure.help
source/linux-2.4.x/crypto/: tcrypt.c  tcrypt.h  tea.c
source/linux-2.4.x/drivers/: Makefile
source/linux-2.4.x/fs/: Config.in  Makefile  binfmt_elf.c  buffer.c  dquot.c  exec.c
source/linux-2.4.x/include/: ack  openswan.h  pfkey.h  pfkeyv2.h
source/linux-2.4.x/init/: do_mounts.c  main.c
source/linux-2.4.x/kernel/: dma.c  printk.c
source/linux-2.4.x/lib/: rbtree.c  rwsem-spinlock.c  rwsem.c
source/linux-2.4.x/mm/: filemap.c  memory.c  vmscan.c
source/linux-2.4.x/net/: Config.in  Makefile  sysctl_net.c
source/linux-2.4.x/scripts/: Configure
source/linux-2.6.21.x/: Makefile
source/linux-2.6.21.x/drivers/: Kconfig  Makefile
source/linux-2.6.21.x/fs/: Kconfig  Makefile  aio.c  binfmt_elf.c  buffer.c  dquot.c  exec.c  namei.c  open.c  read_write.c  super.c  sync.c
source/linux-2.6.21.x/init/: Kconfig  main.c
source/linux-2.6.21.x/kernel/: dma.c  panic.c  printk.c  sys.c  sysctl.c
source/linux-2.6.21.x/mm/: Makefile  page-writeback.c  page_alloc.c  vmscan.c
source/linux-2.6.21.x/net/: Makefile
source/linux-2.6.21.x/ralink/: Kconfig
source/linux-2.6.36MT.x/: Makefile
source/linux-2.6.36MT.x/fs/: sync.c
source/linux-2.6.36MT.x/mm/: page-writeback.c
source/linux-2.6.36MT.x/net/: Makefile
source/linux-2.6.36MT.x/ralink/: Kconfig
source/linux-2.6.36MT.x/scripts/: gen_initramfs_list.sh
source/uClibc++/: .config  Makefile  Rules.mak
source/uClibc++/include/: algorithm  associative_base  basic_definitions  bitset  deque  fstream  func_exception  functional  iomanip  ios  iosfwd  iostream  istream  istream_helpers  iterator  iterator_base  limits  list  locale  map  memory  new  numeric  ostream  ostream_helpers  queue  set  sstream  stack  stdexcept  streambuf  string  string_iostream  system_configuration.h  type_traits  (+4 more)
source/user/: Makefile
source/user/watchdog-5.6/: AUTHORS  COPYING  ChangeLog  IAFA-PACKAGE  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.watchdog.ipmi  TODO  config.status  configure  configure.in  create_tarball.sh  tags  watchdog.8  watchdog.conf.5  watchdog.lsm  watchdog.sysconfig  wd_keepalive.8  wdg.sh
source/user/watchdog-5.6/debian/: README.debian  changelog  config  control  copyright  dirs  init  postinst  postrm  preinst  prerm  rules  templates  watch  wd_keepalive.init
source/user/watchdog-5.6/debian/po/: cs.po  de.po  es.po  fi.po  fr.po  gl.po  ja.po  nl.po  pt.po  ru.po  sv.po  templates.pot  vi.po
source/user/watchdog-5.6/examples/: README  another-chance.sh  dbcheck.sh  repair.sh  systemcheck.sh  uptime.sh
source/user/watchdog-5.6/include/: config.h  config.h.in  ext2_mnt.h  extern.h  lomount.h  loop.h  nfs_mountversion.h  sundries.h  watch_err.h  watchdog.h  wd_mntent.h
source/user/watchdog-5.6/redhat/: sysconf.redhat  watchdog.init  watchdog.spec
source/user/watchdog-5.6/src/: Makefile  Makefile.am  Makefile.in  file_stat.c  file_table.c  fstab.c  iface.c  ifdown.c  keep_alive.c  load.c  lomount.c  memory.c  mntent.c  mount.c  net.c  nfsmount.c  nfsmount_xdr.c  pidfile.c  shutdown.c  sundries.c  tags  temp.c  test_binary.c  umount.c  watchdog.c  wd_keepalive.c
source/user/watchdog-5.6/suse/: rc.watchdog.suse
source/vendors/: Makefile
(+6560 files in other folders)
